@@ -1,3 +1,9 @@
+2020-06-11  David Turner  <david@freetype.org>
+
+	*/*: Include internal headers by their real names.
+
+	The FT_INTERNAL_XXX_H macros are going to disappear.
+
 2020-06-09  Alexei Podtelezhnikov  <apodtele@gmail.com>
 
 	* graph/x11/grx11.c (gr_x11_surface_listen_event): No need to flush.
